<resources>
    <string name="app_name">workX</string>
    <string name="pas_de_compte_je_m_inscris">Pas de compte? Je m\'inscris</string>
    <string name="login">Connexion</string>
    <string name="connectez_vous">Connectez-vous</string>
    <string name="workx">WorkX</string>
    <string name="description_1">Trouve ce qu\'il vous faut</string>
    <string name="description_2">Où que vous soyez</string>
    <string name="votre_adresse_mail">Votre adresse mail</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="je_m_inscris">Je m\'inscris</string>
    <string name="j_ai_d_j_un_compte_je_me_connecte">J\'ai déjà un compte, je me connecte !</string>
    <string name="vous_avez_d_j_un_compte_se_connecter">Vous avez déjà un compte? Se Connecter !</string>
    <string name="pr_nom">Prénom</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="confirmation_du_mot_de_passe">Confirmation du mot de passe</string>
    <string name="mot_de_passeR">Mot de passe</string>
    <string name="num_ro_de_t_l_phone">Numéro de téléphone</string>
    <string name="adresse_e_mail">Adresse e-mail</string>
    <string name="nom">Nom</string>
    <string name="rechercher_une_annonce">Rechercher une annonce</string>
    <string name="home">Home</string>

    <string-array name="categories">
        <item>Electronique</item>
        <item>Vente</item>
        <item>Electroménager</item>
        <item>Education</item>
        <item>Graphisme</item>
        <item>Développement</item>
        <item>Finance</item>
    </string-array>
    <string name="select_category">Sélectionner une catégorie</string>
    <string name="description_de_l_annonce">Description de l\'annonce</string>
    <string name="construction_de_cases_pour_chien">Construction de cases pour chien</string>
    <string name="_50_000_fcfa">50.000 FCFA</string>
    <string name="position">Position</string>
    <string name="logbessou">Logbessou</string>
    <string name="en_savoir_plus">en savoir plus</string>
    <string name="image_de_l_annonce">Image de l\'annonce</string>
    <string name="je_suis_un_menuisier_sp_cialis_dans_la_construction_de_maison_pour_votre_chien">Je suis un menuisier spécialisé dans la construction de maison pour votre chien!</string>
    <string name="addbtn">AddBtn</string>
    <string name="search">search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nom_de_l_annonce">Nom de l\'annonce</string>


</resources>