<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:elevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/ad_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/add_img"
            android:contentDescription="@string/image_de_l_annonce" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ad_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingVertical="8dp"
                android:text="@string/construction_de_cases_pour_chien"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textSize="16sp"
                android:textAlignment="textStart"/>

            <TextView
                android:id="@+id/ad_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:text="@string/_50_000_fcfa"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textSize="18sp"
                android:textAlignment="textEnd"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">



            <TextView
                android:id="@+id/ad_details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingVertical="8dp"
                android:text="@string/je_suis_un_menuisier_sp_cialis_dans_la_construction_de_maison_pour_votre_chien"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textSize="14sp"
                android:textAlignment="textStart"/>

            <ImageView
                android:id="@+id/location_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/location"
                android:contentDescription="@string/position" />

            <TextView
                android:id="@+id/ad_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:text="@string/logbessou"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textSize="16sp"
                android:textStyle="italic"
                android:textColor="#0000FF"
                android:textAlignment="textEnd"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Supprimer"
            android:visibility="gone" />
        <Button
            android:id="@+id/ad_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/roundedbutton"
            android:text="@string/en_savoir_plus"
            android:textColor="#ffff"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
