<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:fillViewport="true"
    android:gravity="center"
    android:padding="4dp"
    tools:context=".CreateAd">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Créer une annonce"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="25sp"
            android:textStyle="bold" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:orientation="vertical"
            android:padding="25dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:src="@drawable/add_image"/>
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_gravity="center|center_vertical"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/adName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nom_de_l_annonce"
                    android:inputType="textCapSentences"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/adPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Prix"
                    android:inputType="numberDecimal"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/adPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Numéro de téléphone"
                    android:inputType="phone"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <Spinner
                    android:id="@+id/spinnerCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:entries="@array/categories"
                    android:hint="Sélectionner une catégorie"
                    android:inputType="none"
                    android:prompt="@string/select_category" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/adLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Localisation"
                    android:inputType="textCapSentences"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/adDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description_de_l_annonce"
                    android:inputType="textMultiLine"
                    android:maxLines="10" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btnSelectImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/roundedbutton"
                android:text="Sélectionner des images" />

            <Button
                android:id="@+id/btnCreateAd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/roundedbutton"
                android:text="Créer l'annonce" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.core.widget.NestedScrollView>

